k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gl2pdf
  labels:
    app: gl2pdf
